[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# on linux
# ubuntu, `sudo apt-get install lld clang`
# arch, `sudo pacman -S lld clang`
[target.x86_640unknown-linux-gnu]
rustflags = ["-C", "linker=clang", '-C', "link-arg=-fuse-ld=lld"]

# on macos, `brew install llvm` and follow steps in `brew info llvm`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-use-ld=lld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]

[lib]
# we could use any path here, but we are following the community convention.
# we could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name` which is what we want.
path = "src/lib.rs"

# notice the double square brackets: it's an array in toml's syntax.
# we can only have one library in a project, but we can have multiple binaries!
# if you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
